--- a/views/games.html
+++ b/views/games.html
@@ -1,8 +1,65 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Muertos y heridos</title>
+	<title>game</title>
 </head>
 <body>
-	Ejemplo
+
+	<header id="headerGames">
+		<figure id="imageLogo"><img src="#"></figure>
+		<h1>Muertos y heridos<h1>
+	</header>
+
+	<section id="contentGames">
+
+		<form name="newPlay" target="" method="post">
+			<input type="image" src="#">
+		</form>
+
+		<section id="actualGames">
+			<h3>en juego</h3>
+			<article>
+				<ul>
+					<li>
+						<div class="actualGame">
+							<div class="turnGame">
+								<p>Turno</p>
+							</div>
+							<div class="profilePlayer">
+								<figure id="photoPlayer"><img src="#"></figure>
+								<form name="returnPlay" target="" method="post">
+									<input type="text" name="aliasPlayer"></input>
+									<input type="image" src="#"></input>
+								</form>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</article>
+		</section>
+
+		<section id="oldGames">
+			<h3>en juego</h3>
+			<article>
+				<ul>
+					<li>
+						<div class="oldGame">
+							<div class="statusGame">
+							</div>
+							<div class="profilePlayer">
+								<figure id="photoPlayer"><img src="#"></figure>
+								<form name="viewPlay" target="" method="post">
+									<input type="text" name="aliasPlayer"></input>
+									<input type="image" src="#"></input>
+								</form>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</article>
+		</section>
+
+	</section>
+
 </body>
 </html>
