--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,22 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Muertos y heridos</title>
+	<title>login</title>
 </head>
 <body>
-	Ejemplo
+
+	<header id="headerLogin">
+		<figure id="imageLogo"><img src="#"></figure>
+		<h1>Muertos y heridos<h1>
+	</header>
+
+	<section id="contentLogin">
+		<h2>Introduce tu e-mail y empieza a jugar con tus amigos!</h2>
+		<form name="playForm" target="" method="post">
+			<input type="text" name="aliasPlayer">
+			<input type="image" src="#">
+		</form>
+	</section>
+	
 </body>
 </html>
